--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^7.6.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.5.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
